Town.createUnit(); town(32,32);

--- a/sfml template/sfml template.vcxproj.filters
+++ b/sfml template/sfml template.vcxproj.filters
@@ -205,6 +205,7 @@
     <ClCompile Include="Building.cpp">
       <Filter>BuildingsVova</Filter>
     </ClCompile>
+    <ClCompile Include="Town.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resourses.h">
@@ -315,5 +316,6 @@
     <ClInclude Include="Building.h">
       <Filter>BuildingsVova</Filter>
     </ClInclude>
+    <ClInclude Include="Town.h" />
   </ItemGroup>
 </Project>
