--- a/sfml template/sfml template.vcxproj
+++ b/sfml template/sfml template.vcxproj
@@ -118,14 +118,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\SFML VS C++\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\sfml\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\SFML VS C++\lib x86</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\sfml\lib 86</AdditionalLibraryDirectories>
       <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;sfml-graphics.lib;sfml-window.lib;sfml-system.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -180,6 +180,7 @@
     <ClCompile Include="Settlers.cpp" />
     <ClCompile Include="Technologies.cpp" />
     <ClCompile Include="Terrain.cpp" />
+    <ClCompile Include="Town.cpp" />
     <ClCompile Include="Trade.cpp" />
     <ClCompile Include="Unit.cpp" />
     <ClCompile Include="Writing.cpp" />
@@ -218,6 +219,7 @@
     <ClInclude Include="Settlers.h" />
     <ClInclude Include="Technologies.h" />
     <ClInclude Include="Terrain.h" />
+    <ClInclude Include="Town.h" />
     <ClInclude Include="Trade.h" />
     <ClInclude Include="Unit.h" />
     <ClInclude Include="Writing.h" />
