Actor 80% WindowManager 80% GameManager pre_creation

--- a/sfml template/sfml template.vcxproj
+++ b/sfml template/sfml template.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="Currency.cpp" />
     <ClCompile Include="Forest.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Gold.cpp" />
     <ClCompile Include="Grassland.cpp" />
     <ClCompile Include="Hills.cpp" />
@@ -199,6 +200,7 @@
     <ClInclude Include="Currency.h" />
     <ClInclude Include="Forest.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="Gold.h" />
     <ClInclude Include="Grassland.h" />
     <ClInclude Include="Hills.h" />
