--- a/sfml template/sfml template.vcxproj.filters
+++ b/sfml template/sfml template.vcxproj.filters
@@ -268,6 +268,7 @@
     <ClCompile Include="WindowManager.cpp">
       <Filter>System\WindowManager</Filter>
     </ClCompile>
+    <ClCompile Include="Plains.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resourses.h">
@@ -405,5 +406,6 @@
     <ClInclude Include="WindowManager.h">
       <Filter>System\WindowManager</Filter>
     </ClInclude>
+    <ClInclude Include="Plains.h" />
   </ItemGroup>
 </Project>
