--- a/sfml template/sfml template.vcxproj
+++ b/sfml template/sfml template.vcxproj
@@ -118,14 +118,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\sfml\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\SFML VS C++\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\sfml\lib 86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\SFML VS C++\lib x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;sfml-graphics.lib;sfml-window.lib;sfml-system.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -157,6 +157,7 @@
     <ClCompile Include="Building.cpp" />
     <ClCompile Include="Cavalry.cpp" />
     <ClCompile Include="Ceremonial_Burial.cpp" />
+    <ClCompile Include="Chariot.cpp" />
     <ClCompile Include="CityWalls.cpp" />
     <ClCompile Include="Coal.cpp" />
     <ClCompile Include="Currency.cpp" />
@@ -207,6 +208,7 @@
     <ClInclude Include="Building.h" />
     <ClInclude Include="Cavalry.h" />
     <ClInclude Include="Ceremonial_Burial.h" />
+    <ClInclude Include="Chariot.h" />
     <ClInclude Include="CityWalls.h" />
     <ClInclude Include="Coal.h" />
     <ClInclude Include="Currency.h" />
